# Inlin

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: flow.h  inlin_api.h  keyboard.h  mouse.h  screen.h  system.h
src/: flow.cpp  inlin_api.cpp  keyboard.mm  mouse.mm  screen.mm  system.mm
